--- a/_posts/2019-01-30-DQfD.md
+++ b/_posts/2019-01-30-DQfD.md
@@ -8,7 +8,7 @@ tags:
   - Deep Reinforcement Learning
 ---
 
-I am currently reading this [Deep Q-Learning from Demonstration](https://arxiv.org/abs/1704.03732) paper for the imitation learning class. Based on my understanding, this paper modifies how we train a DQN by replacing the replay buffer with a prioritized experience replay and changing the loss function to also accommodate for imitating the expert. Additionally, the training process is modified such that there is a pre-training phase and a post-training phase. The pre-training phase is just training the DQN with only expert data inside the replay buffer. The post-training phase is where the agent interacts with the environment and samples from it. Basically the authors are able to get the DQN to perform greatly before any post-training iterations and learn quickly during the post-training iterations.
+I am currently reading this [Deep Q-Learning from Demonstration](https://arxiv.org/abs/1704.03732) paper for the imitation learning class. Based on my understanding, this paper modifies how we train a DQN by replacing the replay buffer with a prioritized experience replay and changing the loss function to also accommodate for imitating the expert. Additionally, the training process is modified such that there is a pre-training phase and a post-training phase. The pre-training phase is just training the DQN with only expert data inside the replay buffer. The post-training phase is where the agent interacts with the environment and learns from it while enforcing the agent to imitate the expert. Basically the authors are able to get the DQN to perform greatly before any post-training iterations and learn quickly during the post-training iterations.
 
 Background
 ======
