--- a/talkmap.ipynb
+++ b/talkmap.ipynb
@@ -85,19 +85,17 @@
     }
    ],
    "source": [
-    "\n",
     "for file in g:\n",
-    "    with open(file, 'r') as f:\n",
+    "    with open(file, \"r\") as f:\n",
     "        lines = f.read()\n",
     "        if lines.find('location: \"') > 1:\n",
     "            loc_start = lines.find('location: \"') + 11\n",
     "            lines_trim = lines[loc_start:]\n",
     "            loc_end = lines_trim.find('\"')\n",
     "            location = lines_trim[:loc_end]\n",
-    "                            \n",
-    "           \n",
+    "\n",
     "        location_dict[location] = geocoder.geocode(location)\n",
-    "        print(location, \"\\n\", location_dict[location])\n"
+    "        print(location, \"\\n\", location_dict[location])"
    ]
   },
   {
@@ -120,7 +118,9 @@
    ],
    "source": [
     "m = getorg.orgmap.create_map_obj()\n",
-    "getorg.orgmap.output_html_cluster_map(location_dict, folder_name=\"../talkmap\", hashed_usernames=False)"
+    "getorg.orgmap.output_html_cluster_map(\n",
+    "    location_dict, folder_name=\"../talkmap\", hashed_usernames=False\n",
+    ")"
    ]
   },
   {
